--- a/styles.css
+++ b/styles.css
@@ -42,12 +42,68 @@ span{
     color: white;
     font-weight: 500;
     margin-left: 0 20px;
-    transition: 0.5s;
+    transition: 0.3s ease;
 }
 
-.navbar a:hover 
+.navbar a:hover , 
 .navbar a.active {
     color:crimson;
     border-bottom: 3px solid crimson;
 }
 
+.contact {
+    padding: 10px 28px;
+    background-color: white;
+    color: black;
+    border: 2px solid transparent;
+    border-radius: 8px;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+
+.contact:hover {
+    background-color: crimson;
+    color: white;
+   box-shadow: 0 0 25px crimson;
+}
+
+.home {
+   width: 100%;
+   min-height: 100vh;
+   background: rgb(241, 241, 241);
+   display: flex;
+   align-items: center;
+   gap: 7em;
+   padding: 30px 12% 0;
+}
+
+.home-content {
+    max-width: 800px;
+}
+
+.home-content h3 {
+    font-size: 42px;
+}
+
+.home-content h1 {
+    font-size: 62px;
+    line-height: 1.2;
+
+}
+
+.home-content p {
+    font-size: 18px; 
+    margin: 25px 0 30px;
+}
+
+.btn-box {
+    width: 345px;
+    display: flex;
+    gap: 2em;
+}
+
+.btn-1 {
+padding: 15px 28px;
+}
